# ping_pong_robot

./: CMakeLists.txt  README.md  package.xml
launch/: ping_pong_amcl.launch  ping_pong_amcl_demo.launch  ping_pong_bringup.launch  ping_pong_camera.launch  ping_pong_camera_demo.launch  ping_pong_camera_rosbag.launch  ping_pong_demo_camera.launch  ping_pong_demo_camera2.launch  ping_pong_frontier_exploration.launch  ping_pong_gmapping.launch  ping_pong_navigation.launch  ping_pong_robot_amcl.launch  ping_pong_start_bridge.launch  ping_pong_start_control.launch  ping_pong_up.launch  ping_pong_up2.launch  ping_pong_up_demo.launch  ping_pong_usb_cam.launch  ping_pong_world.launch
maps/: map_1.pgm  map_1.world  map_1.yaml  mapa.pgm  mapa.yaml  mapa2.pgm  mapa2.yaml
memoria/: .~lock.memoria.doc#  .~lock.memoria.odt#  memoria.doc  memoria.odt
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
param-demo/: costmap_common_params.yaml  dwa_local_planner_params.yaml
param-real/: costmap_common_params.yaml  costmap_common_params0.yaml  dwa_local_planner_params.yaml  smoother.yaml
robots/: kobuki_hexagons_rplidar.urdf.xacro  kobuki_hexagons_rplidar.xacro  kobuki_hexagons_rplidarBIS2.urdf.xacro
src/: camera.cpp  camera_node.cpp  camera_node.h  camera_node0.cpp  camera_node1.cpp  camera_node_demo.cpp  camera_node_pelotas_noche_640_480.cpp  camera_node_real.cpp  control.cpp  control0.cpp  control1.cpp  control_demo.cpp  control_normal.cpp  exploration.cpp  exploration_OLD.cpp  kidnapping.cpp  simple_navigation_goals.cpp
www/: hola.html  index.html  (+3 more)
(+10 files in other folders)
